# LAMMP

./: CMakeLists.txt  README.md  main.cpp
benchmark/lammp/: CMakeLists.txt  main.cpp
benchmark/lammp/include/: benchmark.hpp
benchmark/lammp/src/: bench_add.cpp  bench_barre_pre_div.cpp  bench_div.cpp  bench_div_128.cpp  bench_mul.cpp  bench_mul_128.cpp  bench_sub.cpp  gener.cpp
example/lammp/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp
include/lammp/: 3ntt_crt_data.h  3ntt_crt_kernal.h  base_cal.hpp  lammp.hpp  lampz.h  mont64_div64.hpp  u128_u192_macro.h  version.h
src/lammp/: CMakeLists.txt
src/lammp/Arithmetic/div/: classic.cpp  div64.cpp
src/lammp/Arithmetic/mul/: 3ntt_crt.cpp
src/lammp/Arithmetic/shr/: shr.cpp
src/lammp/base_cal/: u128.inl
src/lammp/lampz/: add_sub.cpp  div.cpp  init.cpp  mul.cpp  shr.cpp  str.cpp
test/lammp/: CMakeLists.txt  main.cpp
test/lammp/include/: test_long.hpp  test_short.hpp
test/lammp/src/: test_abs_mul64.cpp  test_shift.cpp  test_unbal_mul.cpp  test_version.cpp
